5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1644_2703.log
== SUBMITION (2019-04-09 17:08:07) 
-- CODE:
if (18>=18)
	print("eleitor")
else:
	print (nao_eleitor)
-- EXECUTION TIME:
0.205552
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 1
    if (18>=18)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:08:43) 
-- CODE:
if (18>=18)
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.138074
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 1
    if (18>=18)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:51) 
-- CODE:
if (18>=18)
	print("eleitor")
else:
	print ("nao_eleitor")
-- ERROR:
File "XXXX", line 1
    if (18>=18)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:10:19) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.280515
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:10:25) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.195524
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:10:29) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:15) 
-- CODE:
if (idade>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.211064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2703/main.py", line 1, in <module>
    if (idade>=18):
NameError: name 'idade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:25) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.172579
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:11:29) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:11:33) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.122001
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:11:37) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:12:44) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- EXECUTION TIME:
0.137319
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:12:51) 
-- CODE:
if (18>=18):
	print("eleitor")
else:
	print ("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:09) 
-- CODE:
x=int(input("idade: "))

if (x>=18):
	idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print (idade)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:51:25) 
-- CODE:
x=int(input("idade: "))

if (x>=18):
	idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print (idade)
-- EXECUTION TIME:
0.171157
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
